syntax = "proto3";

package book;

option go_package = "./pkg/book/pb";

message CreateBookRequest {
    string title = 1;
    string description = 2;
    string author = 3;
}

message CreateBookResponse {
    int64 status = 1;
    string error = 2;
    int64 id = 3;
}

message FindOneData {
    int64 id = 1;
    string title = 2;
    string description = 3;
    string author = 4;
}

message FindOneRequest {
    int64 id = 1;
}

message FindOneResponse {
    int64 status = 1;
    string error = 2;
    FindOneData data = 3;
}

message DeleteBookRequest {
    int64 id = 1;
}

message DeleteBookResponse {
    int64 status = 1;
    string error = 2;
}

service BookService {
    rpc CreateBook(CreateBookRequest) returns (CreateBookResponse);
    rpc FindOne(FindOneRequest) returns (FindOneResponse);
    rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse);
}